# cfMaps

./: .gitignore  README.md  pyproject.toml
.history/: .gitignore_20251016173209  README_20251016191609.md  README_20251016191613.md  README_20251016191622.md  README_20251016191805.md  README_20251016191837.md  README_20251016191900.md  README_20251016192002.md  README_20251016192114.md  README_20251016192238.md  README_20251016192310.md  README_20251016192327.md  README_20251016192609.md  README_20251016192854.md  README_20251016193306.md  README_20251016194531.md  README_20251016194814.md
cfmap.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/html/: .buildinfo  cfmap.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  refs.html  search.html  searchindex.js
docs/html/_modules/: index.html
docs/html/_modules/cfmap/: CF_mapping.html  color_palettes.html  pRF_processing.html
docs/html/_sources/: cfmap.rst.txt  index.rst.txt  modules.rst.txt  refs.md.txt
docs/html/_sources/atlases/: atlases.md.txt  index.rst.txt
docs/html/_sources/connmaps/: connmapping.md.txt  index.rst.txt
docs/html/_sources/vfm/: index.rst.txt  retmaps.md.txt
docs/html/_static/: custom.css
docs/html/atlases/: atlases.html  index.html
docs/html/connmaps/: connmapping.html  index.html
docs/html/notebooks/: CF_modelling.html  pRF_modelling.html  pRF_modelling.ipynb
docs/html/vfm/: index.html  retmaps.html
